# copilot-usage

./: .env.example  Cargo.toml  README-zh.md  README.md
.claude/specs/github-copilot-usage-query/: design.md  requirements.md
.claude/specs/rewrite-to-rust/: design.md  requirements.md
src/: error.rs  formatter.rs  github_client.rs  main.rs  processor.rs  types.rs
